@@ -36,16 +36,7 @@ void dump_stats(guint32 diff_msecs);
 void timeout_changed(void);
 void redraw_canvas_background(GtkWidget *canvas); /* Called by on_canvas1_size_allocate */
 
-#define TOTAL_POSITION_ELEMENTS 1000
-#define MAX_POSITION_COLUMNS 10
-
 /* Array of lists of nodeset_specs */
-extern GList *position_elements[TOTAL_POSITION_ELEMENTS];
-
-extern guint total_position_elements;
-extern guint position_column[TOTAL_POSITION_ELEMENTS];
-extern guint total_position_columns;
-extern guint position_column_count[MAX_POSITION_COLUMNS+1];
-extern guint position_column_max_count[MAX_POSITION_COLUMNS+1];
+extern GPtrArray *column_patterns;
 
 #endif /* DIAGRAM_H */
